activates alongside the round announcement to celebrate the start of a new round.- Updated session storage to manage the last displayed round.- Modified HTML structure for better organization and readability.- Added CSS styles for the new announcement feature to ensure proper layout and visibility.

--- a/frontend/user/style.css
+++ b/frontend/user/style.css
@@ -3841,3 +3841,11 @@ RULES AREA START HERE
     object-position: center;
     display: none;
 }
+
+.round-announcement{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
